hex and base64 convenience methods